opdatering af tekst

--- a/cripple.html
+++ b/cripple.html
@@ -155,7 +155,11 @@
 
             <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+            <p>Dette projekt var rigtig interessant og lå lige til højrebenet for mit vedkommende. Jeg startede med at lave en skitse og derefter bygge en historie ud fra denne. Derefter samlede jeg en hel masse inspiration fra forskellige stilarter jeg godt kunne lide og gik så til Youtube for at finde tutorials der kunne hjælpe mig på vej med at komme i gang med scenen til spillet. Jeg kom frem til, at der ikke fandtes nogen tutorials der kunne hjælpe mig ordentligt på vej, så jeg prøvede mig frem. Det resulterede i en hel masse overarbejde, men et færdigt produkt jeg var nogenlunde tilfreds med.
+            <br>
+
+Efterfølgende skulle vi så lære at kode spillet. Dette var ret overskueligt  da jeg havde lavet spillet meget simpelt, men der var dog med et par få problemer undervejs. Musikken producerede jeg selv i FL Studio 12. Jeg havde ledt lidt rundt på nettet efter noget inspiration, og gik så til værks i en stilart jeg syntes var passende til spillet.
+</p>
 
 
         </div>
@@ -241,7 +245,7 @@
 
             <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Det tredje tema på semesteret var animations temaet. Her skulle der produceres et interaktivt animeret spil der skal kunne opleves i en browser og derfor skulle JavaScript også implementeres udover den sædvanlige HTML og CSS.</p>
 
 
         </div>
@@ -255,7 +259,11 @@
 
             <h2>Refleksion</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Efter dette projekt har jeg fået kæmpe respekt for folk der laver online spil. Da jeg kan se hvor meget arbejde der skal laves for at få det til at se lækkert ud, bliver jeg helt forbløffet når jeg ser diverse online spil, som jeg ellers før ikke har skænket en tanke med hensyn til illustrationer.
+            <br>
+
+Det som jeg kan sige om mit eget projekt er at jeg i fremtiden bør vælge min stilart med omhu. Når man skal lære en hel masse nye ting med hensyn til kodning, er det nok smartest at vælge en mindre detaljeret stilart, fordi det i mit tilfælde, tog længere tid end jeg havde forventet. Det førte dog til en masse ny viden i Illustrator med værktøjer og funktioner jeg ikke havde prøvet før.
+</p>
 
 
         </div>
