--- a/fronter_xd.html
+++ b/fronter_xd.html
@@ -147,7 +147,7 @@
 
             <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+            <p>I dette projekt lavede jeg en prototype til et nyt Fronter i programmerne Adobe XD og InDesign. Min arbejdsproces dækker de 4 første dage i sprintet: Map, Sketch, Decide og til sidst Prototype. Den indeholder en forside med b.la skema og afleveringer, og har i alt nogle steps der navigere brugeren rundt i prototypen. Den er designet efter et styletile vi fik udleveret og derudover har jeg også fået inspiration fra Fronters diverse konkurrenter.</p>
 
 
         </div>
@@ -230,7 +230,7 @@
 
             <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Fjerde tema ''Grundlæggende UX'' gav mig en grundlæggende forståelse for og erfaring hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder jeg kan benytte til research, design, test og produktion af digitale løsninger til alle brugergrænseflader, så arbejdet ikke længere kun er et resultat af ens eget synspunkt og meninger, men på konkrete indsigter om reelle brugere og hvad de mener. </p>
 
 
         </div>
@@ -244,7 +244,12 @@
 
             <h2>Refleksion</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Som jeg har fundet frem til på denne uddannelse, får jeg virkelig meget ud af at gå på nettet og finde inspiration fra andre designers. På den måde kan jeg lave et produkt, såsom en anderledes navigation, en “send besked” formular, en notifikation funktion osv. som jeg aldrig har prøvet at lave før, og stadig komme frem til et godt resultat.
+
+            <br><br>
+
+Det var super sjovt at bruge Adobe XD og dejligt at se hvor nemt og hurtigt man lærer programmet.
+</p>
 
 
         </div>
