--- a/kea_social.html
+++ b/kea_social.html
@@ -85,7 +85,11 @@
 
             <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+            <p>I en gruppe af 7 personer udarbejdede vi systematisk dag for dag vha. design sprint denne app der b.la. hjælper de studerende på KEA med at finde vigtige datoer for begivenheder og indsamle såkaldte ''coins'' så man sparer på forskellige produkter i kantinen på den lange bane.
+            <br><br>
+
+Vi havde et stort whiteboard hvor hele Design Sprint forløbet var på, hvilket gjorde det nemmere at se hvor vi var kommet fra og hvor vi var på vej hen.
+</p>
 
 
         </div>
@@ -157,26 +161,7 @@
         </div>
 
 
-                 <div class="column">
 
-
-                      <div class="grid">
-
-    <figure class="hover-effect">
-
-                         <img src="img/portfolio/native/map.png" alt="">
-
-
-
-                    </figure>
-
-
-        </div>
-
-
-
-
-        </div>
 
 
         </div>
@@ -187,7 +172,11 @@
 
             <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Det sidste projekt i Grundlæggende UX temaet skulle vi i grupper lave en såkaldt Native App. Denne app blev udarbejdet efter et Design Sprint
+            <br><br>
+
+Design Sprint er en proces man bruger til at skabe hurtige og sikre resultater ved at udvikle, validere og teste ens idéer på en sikker og systematisk måde. Vi lærte at gå fra idé til et færdigt produkt på 5 dage, og få en masse forskellig input fra alle i teamet og derved komme frem til den bedst mulige løsning.
+</p>
 
 
         </div>
@@ -201,7 +190,7 @@
 
             <h2>Refleksion</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Efter dette projekt gik det op for mig hvor fedt et redskab Design Sprint egentlig er. For at være ærlig synes jeg det var meget forvirrende i den første uge, hvor vi skulle lave prototype, fordi det var hele klassen der skulle være fælles om beslutningerne, men da vi var et hold på 7 der skulle lave long-term goals, HMW spørgsmål osv., gav det meget bedre mening og det var meget mere brugbart. </p>
 
 
         </div>
