--- a/pilotprojekt.html
+++ b/pilotprojekt.html
@@ -149,7 +149,17 @@
 
             <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+            <p>I grupper af to skulle vi finde en person og interviewe dem om deres passion. Jeg valgt min tegnelærer (Rasmus Balstrøm), som lever af at lave kunst. Vi skrev 5 spørgsmål ned, planlagde forskellige B-rolls vi kunne optage og lånte mikrofon og kamerastativ af Tech Lounge.
+
+            <br><br>
+
+Vi skulle filme i Rasmus Balstrøms atalier og da vi kom der op, så vi en masse muligheder for flotte B-rolls skud vi kunne optage og fandt hurtigt en god placering til interviewet, med hans seneste værk i baggrunden.
+
+Efter optagelsen gik vi så rundt og filmede dækbilleder og kørte derefter hen til en graffitivæg Balstrøm nævner i interviewet.
+<br><br>
+
+Filmen er derefter klippet og colograded i Adobe Premier.
+</p>
 
 
         </div>
@@ -163,7 +173,7 @@
 
             <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>I dette tema blev jeg introduceret til de grundlæggende ting inden for indholds- og videoproduktion. Vi fik mulighed for at afprøve vores nye viden inden for web content, digital kommunikation og brugergrænseflader.</p>
 
 
         </div>
@@ -177,7 +187,9 @@
 
             <h2>Refleksion</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Jeg synes det var et rigtig sjovt og spændende projekt at lave og fandt ud af hvor meget B-rolls gør for et interview. I fremtidige projekter vil jeg optage mange flere B-rolls end jeg har gjort tidligere, fordi man altid ender med at have for få klips, når man sidder og redigerer.
+
+</p>
 
 
         </div>
