--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
 
             <p>
 
-                Dette var mit første kodningsprojekt på KEA. Jeg havde i ugerne op til skulle lave en slags prototype i InDesign for at have en idé om hvordan det skulle se ud. Derudover havde jeg lært grundlæggende HTML og CSS og lavet forskellige små øvelser med styling af strukturen og også lært om flexbox, der skulle bruges til at gøre siden responsiv. Det var et rigtig spænende projekt, og jeg fik en masse forståelse for hvad der skal til for at organisere og opsætte en hjemmeside
+                Dette var mit første kodningsprojekt på KEA. Jeg havde i ugerne op til skulle lave en slags prototype i InDesign for at have en idé om hvordan det skulle se ud. Derudover havde jeg lært grundlæggende HTML og CSS og lavet forskellige små øvelser med styling af strukturen og også lært om flexbox, der skulle bruges til at gøre siden responsiv. Det var et rigtig spændende projekt, og jeg fik en masse forståelse for hvad der skal til for at organisere og opsætte en hjemmeside
 
             </p>
 
@@ -122,7 +122,7 @@
             <p>
 
                 Dette projekt gik ud på at finde en person og filme et interview med dem hvor de taler om deres passion. <br>
-                Jeg valgte at interviewe min tegnelærer, Rasmus Balstrøm, om hans passion for kunst, graffiti og om hvordan hans værker blev set af samfundet. Jeg lærte, at bruge en ekstern mikrofon og også forskellige filmiske virkemidler, så som B-rolls for at gøre interviewet mere interessant og stemningsfyldt.
+                Jeg valgte at interviewe min tegnelærer, Rasmus Balstrøm, om hans passion for kunst, graffiti og om hvordan hans værker bliver set af samfundet. Jeg lærte, at bruge en ekstern mikrofon og også forskellige filmiske virkemidler, så som B-rolls for at gøre interviewet mere interessant og stemningsfyldt.
 
             </p>
 
@@ -179,7 +179,7 @@
 
            <div class="grid">
 
-   <a href="http://bundee.art/kea/02-content/02_redesign/02_02_06_redesign/om.html"><figure class="hover-effect">
+   <a href="http://rasmushavmoeller.dk/kea/02-content/02-redesign/02_02_06_redesign/om.html"><figure class="hover-effect">
 
                         <img src="img/portfolio/pia_c.png" alt="pilot" />
 
@@ -220,7 +220,7 @@
 
             <p>
 
-                Denne opgave strakte sig over to uger. Første uge skulle vi finde en "kunde", hvis hjemmeside kunne trænge til et redesign. og filme et interview med vores kunde. Det endte med at minde mere om en reklame video, da vi kun havde brugt lyddelen af interviewet og redigeret på en måde der kunne tiltrække kunder ved at høre om Pia Christensens (vores kunde) process og hvilke pricipper hun vægter højest. Jeg lærte dog meget om hvor forskellige folk kan være, når de skal filmes og interviewes. Nogen har meget nemt ved det, måske fordi de har gjort det en masse gange før, hvor andre bliver meget nervøse. Derfor skal man overveje en anden tilgang til interviewet, for at få dem til at føle sig tilpas.
+                Denne opgave strakte sig over to uger. Første uge skulle vi finde en "kunde", hvis hjemmeside kunne trænge til et redesign og filme et interview med vores kunde. Det endte med at minde mere om en reklame video, da vi kun havde brugt lyddelen af interviewet og redigeret på en måde der kunne tiltrække kunder ved at høre om Pia Christensens (vores kunde) proces og hvilke pricipper hun vægter højest. Jeg lærte dog meget om hvor forskellige folk kan være, når de skal filmes og interviewes. Nogen har meget nemt ved det, måske fordi de har gjort det en masse gange før, hvor andre bliver meget nervøse. Derfor skal man overveje en anden tilgang til interviewet, for at få dem til at føle sig tilpas.
 
 
             </p>
@@ -374,8 +374,14 @@
 
             <p>
 
-                Dette projekt var super fedt at komme igang med! Vi skulle finde på en idé til et spil. Da jeg elsker, at tegne og finde på sjove historier, havde jeg det super sjovt med denne opgave. Jeg fik tegnet en skitse til hvordan min spilskærm skulle se ud, og gik hurtigt igang med at finde inspiration til stilarten. Da jeg gerne ville have det til at være i samme stil som Alto's Adventure prøvede jeg at finde Youtube tutorials, men havde svært ved at finde nogen videoer der mindede om den skyline jeg gerne ville lave, så jeg endte med at tegne efter et af de billeder jeg havde brugt til mit moodboard. <br> <br>
-                Det endte med at blive et kæmpe projekt, og lavede mange fejl i opbygning af scenen og fordi jeg ikke havde brugt Illustrator specielt meget på daværende tidspunkt skulle jeg også lære en hel masse funktioner. Alt i alt lærte jeg rigtig meget om programmet men det ville nok havde været smartere at vælge en stilart med færre detaljer, da jeg havde begrænset tid og ikke kendte programmet super godt.
+
+               En krigsveteran ligger i en mørk og afskærmet gyde. I hans yngre dage var
+han spion for sin nation, men blev fanget under en mission. Han har ingen lemmer tilbage, fordi han blev holdt i fangeskab og totureret af fjenden. Krigen er slut, han har overlevet, men det eneste han ejer er et lille rulle-bræt
+han bruger til at komme rundt på.
+Du skal, som den flinke forbipasserende, hjælpe den stakkels mand med at
+samle mønter så han kan købe robot-proteser til alle hans lemmer.
+Hvis du derimod kommer til at samle de gule morfin piller op, får du hans
+svigtende lever til at kradse af og Lil Cripple dør.
 
             </p>
 
@@ -458,8 +464,15 @@
 
             <p>
 
-                Den følgende uge skulle vi komme med et bud på hvordan man kunne lave et redesign af vores kundes nuværende hjemmeside. Vi fik lavet nogen forskellige tests af den nuværende side, som fx BERT-testen og 5-sekunders testen, og disse data brugte vi til at bedømme hvilke features og stilmessige egenskaber vi ville beholde og hvad der skulles ændres. <br> <br>
-                Det er lidt af en udfordring at gå fra at have et design i tankerne til at skulle kode det, men det var en sjov og lærerig process, selvom jeg desværre kun kunne være med til halvdelen af den.
+               Du er en 8. klasses elev - pige eller dreng? Du vælger selv! Dine venner skriver og siger de har et vildt billede, som de gerne vil dele med SnapChat gruppen. Hvad gør du? Bukker du under for gruppepresset, selvom du godt ved, at det er forkert at dele billeder, eller sætter du en stopper for billeddelingen?
+
+               <br>
+               <br>
+               Vidste du, at 53% har modtaget en anden persons personlige nøgenbillede? (YouGov undersøgelse).
+
+               <br>
+               <br>
+               Da PrivatSnak er rådgivning til børn og unge, producerede vi et spil der tager udgangspunkt i appen SnapChat. Vi lavede en SnapChat samtale hvor spilleren kan styre en samtale kontinuert i den retning de mener er den rette.
 
 
             </p>
@@ -501,8 +514,8 @@
 
             <p>
 
-                Dette projekt var super fedt at komme igang med! Vi skulle finde på en idé til et spil. Da jeg elsker, at tegne og finde på sjove historier, havde jeg det super sjovt med denne opgave. Jeg fik tegnet en skitse til hvordan min spilskærm skulle se ud, og gik hurtigt igang med at finde inspiration til stilarten. Da jeg gerne ville have det til at være i samme stil som Alto's Adventure prøvede jeg at finde Youtube tutorials, men havde svært ved at finde nogen videoer der mindede om den skyline jeg gerne ville lave, så jeg endte med at tegne efter et af de billeder jeg havde brugt til mit moodboard. <br> <br>
-                Det endte med at blive et kæmpe projekt, og lavede mange fejl i opbygning af scenen og fordi jeg ikke havde brugt Illustrator specielt meget på daværende tidspunkt skulle jeg også lære en hel masse funktioner. Alt i alt lærte jeg rigtig meget om programmet men det ville nok havde været smartere at vælge en stilart med færre detaljer, da jeg havde begrænset tid og ikke kendte programmet super godt.
+                I dette projekt skulle vi lave vores version på en bedre løsning af Fronter. Dette gjorde vi med Design Sprint metoden. Det var en spændende metode at designe med, da vi fik indsigt i hvad hele vores hold synes var de vigtigste funktioner og ikke kun vores egen mening. Vi blev introduceret til Adobe XD, som er et rigtig fedt og brugervenligt program.<br> <br>
+
 
             </p>
 
@@ -606,8 +619,13 @@
 
             <p>
 
-                Dette projekt var super fedt at komme igang med! Vi skulle finde på en idé til et spil. Da jeg elsker, at tegne og finde på sjove historier, havde jeg det super sjovt med denne opgave. Jeg fik tegnet en skitse til hvordan min spilskærm skulle se ud, og gik hurtigt igang med at finde inspiration til stilarten. Da jeg gerne ville have det til at være i samme stil som Alto's Adventure prøvede jeg at finde Youtube tutorials, men havde svært ved at finde nogen videoer der mindede om den skyline jeg gerne ville lave, så jeg endte med at tegne efter et af de billeder jeg havde brugt til mit moodboard. <br> <br>
-                Det endte med at blive et kæmpe projekt, og lavede mange fejl i opbygning af scenen og fordi jeg ikke havde brugt Illustrator specielt meget på daværende tidspunkt skulle jeg også lære en hel masse funktioner. Alt i alt lærte jeg rigtig meget om programmet men det ville nok havde været smartere at vælge en stilart med færre detaljer, da jeg havde begrænset tid og ikke kendte programmet super godt.
+                Dette var vores sidste projekt på 1. semester, og jeg synes det var et af de sjoveste. Vi måtte selv vælge grupper, så jeg arbejde i gruppe med de folk jeg har det sjovest med i klassen. Vi indså hurtigt at det kunne blive et problem hvis vi kom til at være for useriøse og joke for meget rundt, så vi skrev ind i vores Team Canvas at selvom vi har det sjovt, skal vi også kunne arbejde seriøst med projektet.
+
+                <br><br>
+
+                Vi havde alle en masse gode forslag og mange ting at byde ind med, men blev nød til at skære nogen ting fra i løbet af ugen for at gøre det til en mere overkommelig app.
+
+                Til sidst på ugen skulle vi så pitche vores app, hvilket også var en super spændende og lærerig øvelse. Vi lærte om NABC modellen og hvordan man bedst sælger et produkt.
 
             </p>
 
