--- a/privatsnak.html
+++ b/privatsnak.html
@@ -153,7 +153,16 @@
 
             <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+            <p>Vi startede ud med at brainstorme idéer til hvordan vores spil skulle være. Da dette er svært at starte med, gik vi videre til at lave en målgruppebeskrivelse og 2 personaer der er i denne målgruppe. Vi kom frem til at det kunne være en sjov idé at lave en SnapChat samtale, hvor spilleren selv kunne vælge hvordan samtalen skulle forløbe.
+<br>
+<br>
+Efter det gik vi så igang med at bruge det nye projektstyringsværktøj vi fik til rådighed, som hedder Trello, som vi kunne bruge til at lave et Scrumboard. Det hjalp med at sætte alle arbejdsopgaverne op og uddelegere opgaver til hver person.
+<br><br>
+Dette var en super god metode at bruge, fordi man kunne se hvor meget der manglede, hvornår de forskellige ting skulle laves færdigt og også holde gejsten i live med de daglige Scrum meetings og burndown sessions.
+
+
+Der var meget modgang med kodningen, da det var et meget større projekt end forventet at lave 8 forskellige udfald af samtalen, men vi fik ordnet det hele til tiden og fik produceret et flot produkt.
+</p>
 
 
         </div>
@@ -234,7 +243,7 @@
 
             <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Ligesom det individuelle spil, skulle den kodes i HTML, CSS og JavaScript. Derfor blev alt teori omdannet til praksis hvor en kunde skulle have et produkt. Kundes ønsker til spillet er b.la. beskrevet i et styletile hvori fonte, farvekoder og design er præsenteret. </p>
 
 
         </div>
@@ -248,7 +257,12 @@
 
             <h2>Refleksion</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Jeg fik større kendskab til animationstemaet og JavaScript, men udover det blev jeg også præsenteret for processtyring og projektplanlægning. Ved hjælp af Scrum som projektstyringsværktøj kunne vi i gruppen organisere arbejdsopgaver og få lavet spillet med forskellige deadlines til de forskellige opgaver og derved nå i mål til tiden.
+
+            <br>
+
+
+</p>
 
 
         </div>
