--- a/redesign.html
+++ b/redesign.html
@@ -45,7 +45,7 @@
 
                 <div class="grid">
 
-                    <a href="http://bundee.art/kea/01-web/04-responsive/01_04_02_responsive_v2/index.html"><figure class="hover-effect">
+                    <a href="http://bundee.art/kea/02-content/02_redesign/02_02_06_redesign/index.html"><figure class="hover-effect">
 
                         <img src="img/portfolio/pia_c/website.png" alt="pilot" />
 
@@ -142,7 +142,7 @@
 
             <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+            <p>I dette 2 ugers projekt, som var gruppeorienteret, skulle vi selv ud og finde en virksomhed. Det skulle være en hjemmeside hvor vi følte at vi kunne hamle op med det nuværende design og komme med en bedre løsning. Vi kontaktede Pia Christensen, som er en bundtmagermester, og fik aftalt en dag med hende hvor vi skulle ud lave et interview. Her brugte vi vores viden fra det forrige projekt til at lave et flot interview med B-rolls.</p>
 
 
         </div>
@@ -156,7 +156,7 @@
 
             <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Udgangspunktet for re-designet blev tilrettelæggelsen og produktionen af en præsentationsvideo for virksomheden. Vi skulle lære at have kundekontakt, analysere en virksomheds hjemmesiden og til dels også dets brand og lave en optimeret version af dette. På baggrund af de forskellige testmetoder vi lærte, skulle vi implementere testresultaterne i vores endelig produkter, og få en viden om hvordan forskellige folk tænker og opfatter en hjemmeside.</p>
 
 
         </div>
@@ -170,7 +170,7 @@
 
             <h2>Refleksion</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            <p>Efter færdiggørelsen af dette projekt, fik jeg en forståelse for hvor vigtigt det er at lave nogle forskellige tests inden, under og efter produktionen af en hjemmeside. Derudover fandt jeg også ud af hvor forskellige folk kan være når de bliver optaget til et interview og hvilke fremgangsmåder man kan bruge til forskellige personligheder. </p>
 
 
         </div>
