--- a/responsive_v2.html
+++ b/responsive_v2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +17,8 @@
 <body class="fade_in" style="background-color: #fdfdfd">
 
 
-<header>
-    <nav>
+    <header>
+        <nav>
             <div id="menuknap">☰</div>
             <ul id="menu" class="hidden">
                 <li><a href="index.html">Forside</a></li>
@@ -26,11 +27,11 @@
 
             </ul>
         </nav>
-      </header>
+    </header>
 
 
 
-     <!-- ==========================
+    <!-- ==========================
         PORTFOLIO SECTION
     =========================== -->
 
@@ -38,12 +39,12 @@
 
 
 
-                <h1>
-                   Responsive site <em>V2</em>
-                </h1>
+        <h1>
+            Responsive site <em>V2</em>
+        </h1>
 
 
-<div class="sectionwrapper">
+        <div class="sectionwrapper">
 
 
 
@@ -52,23 +53,25 @@
 
                 <div class="grid">
 
-                    <a href="http://bundee.art/kea/01-web/04-responsive/01_04_02_responsive_v2/index.html"><figure class="hover-effect">
+                    <a href="http://bundee.art/kea/01-web/04-responsive/01_04_02_responsive_v2/index.html">
+                        <figure class="hover-effect">
 
-                        <img src="img/portfolio/responsive/responsive_site.png" alt="pilot" />
+                            <img src="img/portfolio/responsive/responsive_site.png" alt="pilot" />
 
-<figcaption>
-
-
-
-
-<h2 style="color:white; margin-top: 20vw">-Responsive site <em>v2</em>-<span><br>Klik for at se Websiden</span></h2>
+                            <figcaption>
 
 
 
 
-                        </figcaption>
+                                <h2 style="color:white; margin-top: 20vw">-Responsive site <em>v2</em>-<span><br>Klik for at se Websiden</span></h2>
 
-                    </figure></a>
+
+
+
+                            </figcaption>
+
+                        </figure>
+                    </a>
 
 
                 </div>
@@ -132,21 +135,24 @@
         </div>
 
 
-       <div class="sectionwrapper">
+        <div class="sectionwrapper">
 
-              <div class="column">
+            <div class="column">
 
-            <h2>Process</h2>
+                <h2>Process</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta officia saepe et non ab iste magnam ipsam tempora exercitationem sunt dolores mollitia quibusdam, nihil ipsum, maiores sed quae ratione cupiditate.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ex, debitis dolore autem veritatis beatae iure numquam odio laboriosam non fugiat harum temporibus sed porro inventore, tenetur impedit mollitia eveniet.</p>
+                <p>I dette tema startede vi ud med at få tildelt en stilart indenfor grafisk design. Jeg fik stilarten Arts and Crafts og gik i gang med at sammensætte et moodboard med forskellige billeder fra stilarten. Derefter lavede jeg et design til hjemmesiden i InDesign som jeg senere skulle bruge som reference når siden skulle kodes. Vi skulle også lave et splash billede til siden, så ved hjælp af en design process vi lærte i klassen fik jeg lavet en skitse som jeg fik gjort til virkelighed i Photoshop.
+
+                    Med hensyn til kodningen fik vi en masse små-opgaver i undervisningen, som gav os viden og læring inden for responsivt design. Denne viden brugte jeg så, da vi skulle kode “Responsive site v2”
+                    .</p>
+
+
+            </div>
 
 
         </div>
 
-
-          </div>
-
-          <div class="sectionwrapper">
+        <div class="sectionwrapper">
 
             <div class="column">
 
@@ -213,33 +219,33 @@
         </div>
 
 
-<div class="sectionwrapper">
+        <div class="sectionwrapper">
 
-              <div class="column">
+            <div class="column">
 
-            <h2>Formål</h2>
+                <h2>Formål</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
-
-
-        </div>
+                <p>Dette projekt var startskuddet til de mest anvendte redskaber i en multimediedesigners værktøjskasse. Alle de redskaber vi har brugt, er det som udgør hele fundamentet for resten af MMD uddannelsen. I dette tema lærte vi for første gang at sætte websider op i HTML og CSS og også de grundlæggende færdigheder i billedbehandling og design.</p>
 
 
-          </div>
-
-             <div class="sectionwrapper">
-
-              <div class="column">
-
-            <h2>Refleksion</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio et fuga totam at delectus accusantium? Ipsa, ab! Iste aliquam, ad rerum ipsam commodi maiores pariatur, earum iure veniam voluptate blanditiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, ad, rem? Cupiditate repellat nesciunt fugit commodi maiores, ea, sit quasi ipsa debitis quam molestiae veniam eligendi odit repudiandae similique saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, nemo vitae blanditiis voluptatem numquam recusandae autem temporibus. Maxime doloribus quis, in ex autem deleniti illo natus illum cumque harum possimus!</p>
+            </div>
 
 
         </div>
 
+        <div class="sectionwrapper">
 
-          </div>
+            <div class="column">
+
+                <h2>Refleksion</h2>
+
+                <p>Jeg har fået en hel masse ud af dette projekt, da jeg for det første fandt ud af hvor svært det er at gå fra et lækkert design man har lavet fx i InDesign til at få det til at ligne det samme i CSS. Derudover var det rigtig lærerigt at skulle lave forskellige skitser inden man kommer frem til en version man vil lave på computeren. Jeg synes også det var spændende, at se alle de forskellige stilarter der har været gennem tiden, og kunne få inspiration fra fx 1900 tallet til fremtidige designs. </p>
+
+
+            </div>
+
+
+        </div>
 
 
 
@@ -248,4 +254,5 @@
 
 
 </body>
+
 </html>
